--- a/app/src/main/res/layout/comment_vertical_divider_accent.xml
+++ b/app/src/main/res/layout/comment_vertical_divider_accent.xml
@@ -1,5 +1,5 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width=".35dp"
     android:layout_height="match_parent"
-    android:layout_marginStart="10dp"
+    android:layout_marginStart="@dimen/default_gap"
     android:background="@color/accent" />
