--- a/app/src/main/res/layout/partial_post_header.xml
+++ b/app/src/main/res/layout/partial_post_header.xml
@@ -20,35 +20,6 @@
             android:id="@+id/post_detail_post_item"
             layout="@layout/item_post" />
 
-        <LinearLayout
-            android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:background="@color/secondary_background_gray"
-            android:orientation="horizontal"
-            android:paddingBottom="8dp"
-            android:paddingEnd="16dp"
-            android:paddingStart="16dp"
-            android:paddingTop="8dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="290 comments" />
-
-            <android.support.v4.widget.Space
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/downvote" />
-
-        </LinearLayout>
-
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,6 +36,7 @@
                     android:id="@+id/post_detail_post_body"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
                     app:html="@{post.data.selfTextHtml}" />
 
             </LinearLayout>
