--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -35,18 +35,13 @@
                 android:layout_marginStart="@dimen/default_gap"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingTop="@dimen/default_gap"
+                android:paddingEnd="@dimen/default_gap"
                 android:visibility="@{dataProvider.commentTopLineVisible ? View.VISIBLE : View.GONE}">
-
-                <ImageView
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:layout_marginStart="-3dp"
-                    android:src="@drawable/source_commit_start"
-                    android:visibility="@{dataProvider.rootIconVisible ? View.VISIBLE : View.GONE}" />
 
                 <!-- Author -->
                 <TextView
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:id="@+id/item_comment_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -60,16 +55,10 @@
                     android:textStyle="bold"
                     tools:text="Spitsonpuppies" />
 
-                <!-- Divider -->
-                <ImageView
-                    android:layout_width="4dp"
-                    android:layout_height="4dp"
-                    android:layout_marginEnd="6dp"
-                    android:layout_marginStart="6dp"
-                    android:src="@drawable/circle_edge" />
 
                 <!-- Score -->
                 <TextView
+                    android:layout_marginStart="@dimen/default_gap"
                     android:id="@+id/item_comment_score"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -78,16 +67,9 @@
                     android:textSize="12sp"
                     tools:text="250 points" />
 
-                <!-- Divider -->
-                <ImageView
-                    android:layout_width="4dp"
-                    android:layout_height="4dp"
-                    android:layout_marginEnd="6dp"
-                    android:layout_marginStart="6dp"
-                    android:src="@drawable/circle_edge" />
-
                 <!-- Time ago -->
                 <TextView
+                    android:layout_marginStart="@dimen/default_gap"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@{dataProvider.commentTimeSince}"
