--- a/app/src/main/res/layout/partial_post_header.xml
+++ b/app/src/main/res/layout/partial_post_header.xml
@@ -14,6 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         android:orientation="vertical">
 
         <include
