--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -34,7 +34,7 @@
             android:background="?attr/selectableItemBackground"
             android:clickable="@{viewModel.isCommentClickable(comment)}"
             android:focusable="@{viewModel.isCommentClickable(comment)}"
-            android:onClick="@{() -> viewModel.onCommentClicked(comment, commentIndex)}"
+            android:onClick="@{() -> viewModel.onCommentClicked(commentIndex)}"
             android:orientation="vertical"
             tools:ignore="UselessParent">
 
