Log in / log out basics. App-only authentication.

--- a/app/src/main/res/menu/menu_post_list.xml
+++ b/app/src/main/res/menu/menu_post_list.xml
@@ -6,18 +6,7 @@
         android:title="Log In"
         app:showAsAction="never" />
     <item
-        android:title="This one thing"
-        app:showAsAction="never" />
-    <item
-        android:title="This other thing"
-        app:showAsAction="never" />
-    <item
-        android:title="Why"
-        app:showAsAction="never" />
-    <item
-        android:title="I don't know"
-        app:showAsAction="never" />
-    <item
-        android:title="Ouchie"
+        android:id="@+id/menu_post_list_log_out"
+        android:title="Log Out"
         app:showAsAction="never" />
 </menu>
