--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -14,4 +14,8 @@
         android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@android:color/white" />
 
+    <TextView
+        android:id="@+id/drawer_username_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
